--- a/themes/my-first/theme.toml
+++ b/themes/my-first/theme.toml
@@ -5,7 +5,7 @@ name = "my-first"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
-homepage = "http://localhost:1313/"
+homepage = ""
 tags = []
 features = []
 min_version = "0.115.4"
