added url to hugo

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = ''
+baseURL = 'https://astounding-narwhal-f5aab3.netlify.app/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'my-first'
