--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,15 +1,13 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
-  site_domain: localhost:1313/
-  base_url: localhost:1313/
+  branch: main
 media_folder: "static/images" # Folder where user uploaded files should go
 local_backend: true
 public_folder: "images"
 collections:
-  - name: "posts" # Used in routes, e.g., /admin/collections/post
-    label: "Posts" # Used in the UI
-    folder: "content/posts" # The path to the folder where the documents are stored
+  - name: "blog" # Used in routes, e.g., /admin/collections/post
+    label: "Blog" # Used in the UI
+    folder: "content/blog" # The path to the folder where the documents are stored
     path: "{{slug}}/index"
     media_folder: "" # Save images in the post's own folder instead of the static folder
     public_folder: ""
