--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -45,6 +45,7 @@ collections:
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Body, name: body, widget: markdown}
+  - name: "site-settings" # Used in routes, e.g., /admin/collections/post
     label: "Site Settings" # Used in the UI
     files:
       - label: "Footer"
