--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,13 +16,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "image", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
-      # Reference the SEO fields from seo_fields.yml
-      - label: "SEO"
-        name: "seo" # This is an arbitrary field name
-        widget: "object"
-        fields: 
-          - { label: "SEO Metadata", name: "seo_metadata", widget: "file", file: "static/admin/seo_fields.yml" }
-      # Other fields specific to your "Blog" collection
+      - { label: "SEO Metadata", name: "seo", widget: "seo_fields" }
   - name: "work" # Used in routes, e.g., /admin/collections/post
     label: "Work" # Used in the UI
     folder: "content/work" # The path to the folder where the documents are stored
@@ -66,3 +60,10 @@ collections:
         fields:
           - {label: Logo, name: logo, widget: image}
           - {label: Logo, name: logo, widget: image}
+widgets:
+  - name: "seo_fields"
+    label: "SEO Fields"
+    widget: "object"
+    fields:
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Keywords", name: "keywords", widget: "string" }
