--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,48 +4,48 @@ backend:
 media_folder: "static/images" # Folder where user uploaded files should go
 public_folder: "images"
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/post
-    label: "Blog" # Used in the UI
-    folder: "content/blog" # The path to the folder where the documents are stored
-    path: "{{slug}}/index"
-    media_folder: "" # Save images in the post's own folder instead of the static folder
-    public_folder: ""
-    create: true # Allow users to create new documents in this collection
-    fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "image", widget: "image" }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "SEO Metadata", name: "seo", widget: "seo_fields" }
-  - name: "work" # Used in routes, e.g., /admin/collections/post
-    label: "Work" # Used in the UI
-    folder: "content/work" # The path to the folder where the documents are stored
-    path: "{{slug}}/index"
-    media_folder: "" # Save images in the post's own folder instead of the static folder
-    public_folder: ""
-    create: true # Allow users to create new documents in this collection
-    fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Website Preview", name: "website_preview", widget: "image" }
-      - { label: "Website URL", name: "website_url", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Feature Post?", name: "featured_post", widget: "boolean", default: true }
-  - name: "pages" # Used in routes, e.g., /admin/collections/post
-    label: "Pages" # Used in the UI
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blog"
+    create: true
+    fields:
+      - label: "SEO Metadata"
+        name: "seo"
+        widget: "seo_fields" # Use the custom widget
+      # Other fields specific to your "Blog" collection
+
+  - name: "work"
+    label: "Work"
+    folder: "content/work"
+    create: true
+    fields:
+      - label: "SEO Metadata"
+        name: "seo"
+        widget: "seo_fields" # Use the custom widget
+      # Other fields specific to your "Work" collection
+
+  - name: "pages"
+    label: "Pages"
     files:
       - label: "About"
         name: "about"
         file: "content/about/index.md"
         fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Body, name: body, widget: markdown}
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - label: "SEO Metadata"
+            name: "seo"
+            widget: "seo_fields" # Use the custom widget
       - label: "Resume"
         name: "resume"
         file: "content/resume/index.md"
         fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Body, name: body, widget: markdown}
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - label: "SEO Metadata"
+            name: "seo"
+            widget: "seo_fields" # Use the custom widget
+
   - name: "site_settings"
     label: "Site Settings"
     files:
@@ -54,11 +54,13 @@ collections:
         name: footer
         fields:
           - {label: Title, name: title, widget: string}
+          - {label: Logo, name: logo_footer, widget: image}
       - file: "data/globals.json"
         label: Globals
         name: global
         fields:
-          - {label: Logo, name: logo, widget: image}
+          - {label: Logo, name: logo_global, widget: image}
+
 widgets:
   - name: "seo_fields"
     label: "SEO Fields"
