--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,12 +16,12 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "image", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - label: "SEO Metadata"
-            name: "seo"
-            widget: "object"
-            fields: # Nested fields for SEO metadata
-              - { label: "Description", name: "description", widget: "string" }
-              - { label: "Keywords", name: "keywords", widget: "string" }
+      - label: Seo Metadata
+            name: seo_metadata
+            widget: list
+            fields:
+              - {label: Meta Title, name: meta_title, widget: string}
+              - {label: Meta Description, name: meta_description, widget: string}
   - name: "work" # Used in routes, e.g., /admin/collections/post
     label: "Work" # Used in the UI
     folder: "content/work" # The path to the folder where the documents are stored
