--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,7 @@ collections:
         fields:
           - { label: Meta Title, name: meta_title, widget: string }
           - { label: Meta Description, name: meta_description, widget: string }
+          - { label: No Index Page, name: no_index, widget: boolean, default: false }
   - name: "work" # Used in routes, e.g., /admin/collections/post
     label: "Work" # Used in the UI
     folder: "content/work" # The path to the folder where the documents are stored
@@ -64,4 +65,5 @@ collections:
         label: Globals
         name: global
         fields:
+          - { label: Site Title, name: site_title, widget: string }
           - { label: Logo, name: logo, widget: image }
